fixed height layout issues

--- a/packages/app/src/theme/overrides.scss
+++ b/packages/app/src/theme/overrides.scss
@@ -16,7 +16,7 @@
 .page-wrapper {
   width: 1366px;
   margin: auto;
-  height: 100%;
+  min-height: 100vh;
   padding-bottom: 80px; // clearance for footer
 }
 
